[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/scripts/buildings/type-specific/BarracksStructure.gd" type="Script" id=1]
[ext_resource path="res://assets/3d-models/buildings/NATO/NATO Barracks/NATO Barracks.obj" type="ArrayMesh" id=2]
[ext_resource path="res://assets/scripts/user-interface/UnitBuildButton.gd" type="Script" id=3]
[ext_resource path="res://assets/prefabs/units/PrototypeUnit.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/data/building-data/NATO/NATOBarracks.tres" type="Resource" id=5]
[ext_resource path="res://assets/data/unit-data/Prototypes/PrototypeFriendlyInfantryData.tres" type="Resource" id=6]
[ext_resource path="res://assets/textures-materials/color-palette.tres" type="Material" id=7]

[sub_resource type="ConcavePolygonShape" id=1]
data = PoolVector3Array( -4, 4, 8, -4, 0, 8, -4, 4, -3, -4, 4, -3, -4, 0, 8, -4, 0, -3, 3, 0, -3, 3, 4, -3, 20, 0, -3, 20, 0, -3, 3, 4, -3, 20, 4, -3, 3, 4, -3, 3, 0, -3, 3, 4, 8, 3, 4, 8, 3, 0, -3, 3, 0, 8, 3, 4, 8, 3, 0, 8, -4, 4, 8, -4, 4, 8, 3, 0, 8, -4, 0, 8, 2.5414, 4, -2.5414, 2.5414, 4, 7.5414, 2.5414, 3.8026, -2.5414, 2.5414, 3.8026, -2.5414, 2.5414, 4, 7.5414, 2.5414, 3.8026, 7.5414, -4, 4, -10, -4, 0, -10, 3, 4, -10, 3, 4, -10, -4, 0, -10, 3, 0, -10, -4, 4, -3, -4, 4, -10, -4, 8, -3, -4, 8, -3, -4, 4, -10, -4, 8, -10, -4, 4, -3, -4, 0, -3, -4, 4, -10, -4, 4, -10, -4, 0, -3, -4, 0, -10, 20, 0, -3, 20, 4, -3, 20, 0, -10, 20, 0, -10, 20, 4, -3, 20, 4, -10, 20, 4, -10, 20, 4, -3, 20, 8, -10, 20, 8, -10, 20, 4, -3, 20, 8, -3, 3, 4, -10, 3, 0, -10, 20, 4, -10, 20, 4, -10, 3, 0, -10, 20, 0, -10, -3.5414, 8, -9.5414, 3, 8, -9.5414, -3.5414, 7.8026, -9.5414, -3.5414, 7.8026, -9.5414, 3, 8, -9.5414, 3, 7.8026, -9.5414, 19.5414, 8, -3.4586, 3, 8, -3.4586, 19.5414, 7.8026, -3.4586, 19.5414, 7.8026, -3.4586, 3, 8, -3.4586, 3, 7.8026, -3.4586, 3, 4, -10, 20, 4, -10, 3, 8, -10, 3, 8, -10, 20, 4, -10, 20, 8, -10, 3, 4, -3, -4, 4, -3, 3, 8, -3, 3, 8, -3, -4, 4, -3, -4, 8, -3, 20, 4, -3, 3, 4, -3, 20, 8, -3, 20, 8, -3, 3, 4, -3, 3, 8, -3, -4, 4, -10, 3, 4, -10, -4, 8, -10, -4, 8, -10, 3, 4, -10, 3, 8, -10, -3.5414, 4, -2.5414, -3.5414, 4, 7.5414, -4, 4, -3, -4, 4, -3, -3.5414, 4, 7.5414, -4, 4, 8, 2.5414, 4, -2.5414, -3.5414, 4, -2.5414, 3, 4, -3, 3, 4, -3, -3.5414, 4, -2.5414, -4, 4, -3, 2.5414, 4, 7.5414, 2.5414, 4, -2.5414, 3, 4, 8, 3, 4, 8, 2.5414, 4, -2.5414, 3, 4, -3, -3.5414, 4, 7.5414, 2.5414, 4, 7.5414, -4, 4, 8, -4, 4, 8, 2.5414, 4, 7.5414, 3, 4, 8, -3.5414, 8, -3.4586, 3, 8, -3.4586, -4, 8, -3, -4, 8, -3, 3, 8, -3.4586, 3, 8, -3, 3, 8, -9.5414, -3.5414, 8, -9.5414, 3, 8, -10, 3, 8, -10, -3.5414, 8, -9.5414, -4, 8, -10, -3.5414, 8, -9.5414, -3.5414, 8, -3.4586, -4, 8, -10, -4, 8, -10, -3.5414, 8, -3.4586, -4, 8, -3, 19.5414, 8, -3.4586, 19.5414, 8, -9.5414, 20, 8, -3, 20, 8, -3, 19.5414, 8, -9.5414, 20, 8, -10, 3, 8, -3.4586, 19.5414, 8, -3.4586, 3, 8, -3, 3, 8, -3, 19.5414, 8, -3.4586, 20, 8, -3, 19.5414, 8, -9.5414, 3, 8, -9.5414, 20, 8, -10, 20, 8, -10, 3, 8, -9.5414, 3, 8, -10, -3.5414, 3.8026, -2.5414, 2.5414, 3.8026, -2.5414, -3.5414, 3.8026, 7.5414, -3.5414, 3.8026, 7.5414, 2.5414, 3.8026, -2.5414, 2.5414, 3.8026, 7.5414, 3, 7.8026, -3.4586, -3.5414, 7.8026, -3.4586, 3, 7.8026, -9.5414, 3, 7.8026, -9.5414, -3.5414, 7.8026, -3.4586, -3.5414, 7.8026, -9.5414, 3, 7.8026, -3.4586, 3, 7.8026, -9.5414, 19.5414, 7.8026, -3.4586, 19.5414, 7.8026, -3.4586, 3, 7.8026, -9.5414, 19.5414, 7.8026, -9.5414, 3, 8, -9.5414, 19.5414, 8, -9.5414, 3, 7.8026, -9.5414, 3, 7.8026, -9.5414, 19.5414, 8, -9.5414, 19.5414, 7.8026, -9.5414, -3.5414, 8, -3.4586, -3.5414, 8, -9.5414, -3.5414, 7.8026, -3.4586, -3.5414, 7.8026, -3.4586, -3.5414, 8, -9.5414, -3.5414, 7.8026, -9.5414, 2.5414, 4, 7.5414, -3.5414, 4, 7.5414, 2.5414, 3.8026, 7.5414, 2.5414, 3.8026, 7.5414, -3.5414, 4, 7.5414, -3.5414, 3.8026, 7.5414, -3.5414, 4, 7.5414, -3.5414, 4, -2.5414, -3.5414, 3.8026, 7.5414, -3.5414, 3.8026, 7.5414, -3.5414, 4, -2.5414, -3.5414, 3.8026, -2.5414, 19.5414, 8, -9.5414, 19.5414, 8, -3.4586, 19.5414, 7.8026, -9.5414, 19.5414, 7.8026, -9.5414, 19.5414, 8, -3.4586, 19.5414, 7.8026, -3.4586, 3, 8, -3.4586, -3.5414, 8, -3.4586, 3, 7.8026, -3.4586, 3, 7.8026, -3.4586, -3.5414, 8, -3.4586, -3.5414, 7.8026, -3.4586, -3.5414, 4, -2.5414, 2.5414, 4, -2.5414, -3.5414, 3.8026, -2.5414, -3.5414, 3.8026, -2.5414, 2.5414, 4, -2.5414, 2.5414, 3.8026, -2.5414, 18, 1.8, 6, 18, 0, 6, 18, 1.8, -3, 18, 1.8, -3, 18, 0, 6, 18, 0, -3, 18, 1.8, -3, 18, 0, -3, 19, 1.8, -3, 19, 1.8, -3, 18, 0, -3, 19, 0, -3, 19, 1.8, -3, 19, 0, -3, 19, 1.8, 6, 19, 1.8, 6, 19, 0, -3, 19, 0, 6, 18, 0, 7, 18, 0, 6, 14, 0, 7, 14, 0, 7, 18, 0, 6, 14, 0, 6, 19, 0, -3, 18, 0, -3, 19, 0, 6, 19, 0, 6, 18, 0, -3, 18, 0, 6, 18, 1.8, -3, 19, 1.8, -3, 18, 1.8, 6, 18, 1.8, 6, 19, 1.8, -3, 19, 1.8, 6, 19, 1.8, 7, 19, 0, 7, 18, 1.8, 7, 18, 1.8, 7, 19, 0, 7, 18, 0, 7, 19, 0, 6, 18, 0, 6, 19, 0, 7, 19, 0, 7, 18, 0, 6, 18, 0, 7, 18, 1.8, 6, 19, 1.8, 6, 18, 1.8, 7, 18, 1.8, 7, 19, 1.8, 6, 19, 1.8, 7, 19, 1.8, 6, 19, 0, 6, 19, 1.8, 7, 19, 1.8, 7, 19, 0, 6, 19, 0, 7, 14, 0, 6, 14, 1.8, 6, 14, 0, 7, 14, 0, 7, 14, 1.8, 6, 14, 1.8, 7, 18, 0, 6, 18, 1.8, 6, 14, 0, 6, 14, 0, 6, 18, 1.8, 6, 14, 1.8, 6, 18, 1.8, 7, 18, 0, 7, 14, 1.8, 7, 14, 1.8, 7, 18, 0, 7, 14, 0, 7, 18, 1.8, 6, 18, 1.8, 7, 14, 1.8, 6, 14, 1.8, 6, 18, 1.8, 7, 14, 1.8, 7, 11, 1.8, 7, 11, 1.8, 6, 11, 0, 7, 11, 0, 7, 11, 1.8, 6, 11, 0, 6, 3, 0, 6, 3, 1.8, 6, 3, 0, 7, 3, 0, 7, 3, 1.8, 6, 3, 1.8, 7, 11, 0, 7, 11, 0, 6, 3, 0, 7, 3, 0, 7, 11, 0, 6, 3, 0, 6, 11, 0, 6, 11, 1.8, 6, 3, 0, 6, 3, 0, 6, 11, 1.8, 6, 3, 1.8, 6, 11, 1.8, 6, 11, 1.8, 7, 3, 1.8, 6, 3, 1.8, 6, 11, 1.8, 7, 3, 1.8, 7, 11, 1.8, 7, 11, 0, 7, 3, 1.8, 7, 3, 1.8, 7, 11, 0, 7, 3, 0, 7 )

[node name="NATOBarracks" type="Spatial"]
script = ExtResource( 1 )
data = ExtResource( 5 )

[node name="StaticBody" type="StaticBody" parent="." groups=["buildings"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 1 )

[node name="NATO Barracks" type="MeshInstance" parent="."]
material_override = ExtResource( 7 )
mesh = ExtResource( 2 )
material/0 = null

[node name="SpawnPosition" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.5, 0, 10.5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Toolbar" type="VBoxContainer" parent="CanvasLayer/Control"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -68.0

[node name="RiflemanButton" type="Button" parent="CanvasLayer/Control/Toolbar"]
margin_right = 68.0
margin_bottom = 20.0
text = "Rifleman"
script = ExtResource( 3 )
unit_to_spawn = ExtResource( 4 )
unit_data = ExtResource( 6 )

[node name="SpawnTimer" type="Timer" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
